--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
-Package: mlr3mbo
 Type: Package
+Package: mlr3mbo
 Title: Flexible Bayesian Optimization in R
 Version: 0.1.0
 Authors@R:
     c(person(given = "Michel",
              family = "Lang",
-             role = c("aut"),
+             role = "aut",
              email = "michellang@gmail.com",
              comment = c(ORCID = "0000-0001-9754-0393")),
       person(given = "Bernd",
@@ -26,9 +26,11 @@ Authors@R:
              family = "Moosbauer",
              role = "aut",
              email = "ju.moosbauer@gmail.com"))
-Description: A modern and flexible approach to Bayesian Optimization in R.
+Description: A modern and flexible approach to Bayesian
+    Optimization in R.
 License: LGPL-3
-URL: https://mlr3.mlr-org.com, https://github.com/mlr-org/mlr3mbo
+URL: https://mlr3mbo.mlr-org.com,
+    https://github.com/mlr-org/mlr3mbo
 BugReports: https://github.com/mlr-org/mlr3mbo/issues
 Depends:
     R (>= 3.1.0)
