--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,8 @@
 export(AcqFunction)
 export(AcqFunctionCB)
 export(AcqFunctionMean)
-export(Objective)
-export(Terminator)
-export(TerminatorEvals)
 import(R6)
+import(bbotk)
 import(checkmate)
 import(data.table)
 import(lgr)
