--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,14 @@
 export(AcqFunction)
 export(AcqFunctionCB)
 export(AcqFunctionMean)
+export(Surrogate)
+export(SurrogateLearner)
 import(R6)
 import(bbotk)
 import(checkmate)
 import(data.table)
 import(lgr)
+import(mlr3)
 import(mlr3misc)
 import(paradox)
 importFrom(R6,R6Class)
