--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,15 +45,18 @@ Imports:
     data.table,
     mlr3misc (>= 0.3.0),
     paradox (>= 0.3),
+    lgr (>= 0.3.0),
+    mlr3,
     R6
 Suggests:
     mlr3learners,
+    ranger,
     testthat
 Encoding: UTF-8
 LazyData: true
 NeedsCompilation: no
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.0.2
+Roxygen: list(markdown = TRUE, r6 = FALSE)
+RoxygenNote: 7.1.1
 Collate: 
     'AcqFunction.R'
     'AcqFunctionCB.R'
