--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,15 @@
 export(AcqFunction)
 export(AcqFunctionCB)
 export(AcqFunctionEI)
+export(AcqFunctionSmsEmoa)
 export(AcqOptimizerRandomSearch)
 export(ProposalGenerator)
+export(ProposalGeneratorMpCL)
 export(ProposalGeneratorSingle)
 export(Surrogate)
 export(SurrogateLearner)
+export(SurrogateMultiCrit)
+export(SurrogateMultiCritLearners)
 import(bbotk)
 import(checkmate)
 import(data.table)
@@ -20,3 +24,5 @@ importFrom(R6,is.R6)
 importFrom(utils,data)
 importFrom(utils,head)
 importFrom(utils,tail)
+useDynLib(mlr3mbo,c_eps_indicator)
+useDynLib(mlr3mbo,c_sms_indicator)
