acq no surrogate update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,11 @@ export(AcqFunctionEI)
 export(AcqFunctionSmsEmoa)
 export(AcqOptimizerRandomSearch)
 export(ProposalGenerator)
-export(ProposalGeneratorMpCL)
-export(ProposalGeneratorSingle)
 export(Surrogate)
-export(SurrogateLearner)
 export(SurrogateMultiCrit)
 export(SurrogateMultiCritLearners)
+export(SurrogateSingleCrit)
+export(SurrogateSingleCritLearner)
 import(bbotk)
 import(checkmate)
 import(data.table)
