--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,5 +56,5 @@ Encoding: UTF-8
 LazyData: true
 ByteCompile: no
 NeedsCompilation: no
-Roxygen: list(markdown = TRUE, r6 = FALSE)
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
