--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,9 @@ export(AcqFunction)
 export(AcqFunctionCB)
 export(AcqFunctionEI)
 export(AcqFunctionSmsEmoa)
+export(AcqOptimizer)
+export(AcqOptimizerFromOptimizer)
 export(AcqOptimizerRandomSearch)
-export(ProposalGenerator)
 export(Surrogate)
 export(SurrogateMultiCrit)
 export(SurrogateMultiCritLearners)
