--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,7 +40,7 @@ BugReports: https://github.com/mlr-org/mlr3mbo/issues
 Depends:
     R (>= 3.1.0)
 Imports:
-    bbotk (>= 0.2.0),
+    bbotk (>= 0.2.1),
     checkmate (>= 2.0.0),
     data.table,
     mlr3misc (>= 0.3.0),
@@ -52,6 +52,8 @@ Suggests:
     mlr3learners,
     ranger,
     testthat
+Remotes:
+    mlr-org/bbotk
 Encoding: UTF-8
 LazyData: true
 ByteCompile: no
