--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,11 +9,14 @@ export(AcqFunctionSmsEmoa)
 export(AcqOptimizer)
 export(AcqOptimizerFromOptimizer)
 export(AcqOptimizerRandomSearch)
+export(MboDummyArchive)
+export(OptimizerMbo)
 export(Surrogate)
 export(SurrogateMultiCrit)
 export(SurrogateMultiCritLearners)
 export(SurrogateSingleCrit)
 export(SurrogateSingleCritLearner)
+export(TunerMbo)
 import(bbotk)
 import(checkmate)
 import(data.table)
