--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,8 @@ import(mlr3misc)
 import(paradox)
 importFrom(R6,R6Class)
 importFrom(R6,is.R6)
+importFrom(backports,import)
+importFrom(stats,runif)
 importFrom(utils,data)
 importFrom(utils,head)
 importFrom(utils,tail)
