--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(SurrogateMultiCritLearners)
 export(SurrogateSingleCrit)
 export(SurrogateSingleCritLearner)
 export(TunerMbo)
+export(bayesop_soo)
 import(bbotk)
 import(checkmate)
 import(data.table)
