--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(SurrogateSingleCrit)
 export(SurrogateSingleCritLearner)
 export(TunerMbo)
 export(bayesop_soo)
+export(result_by_surrogate_design)
 import(bbotk)
 import(checkmate)
 import(data.table)
