--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(SurrogateMultiCritLearners)
 export(SurrogateSingleCrit)
 export(SurrogateSingleCritLearner)
 export(TunerMbo)
+export(bayesop_smsemoa)
 export(bayesop_soo)
 export(result_by_surrogate_design)
 import(bbotk)
@@ -25,6 +26,7 @@ import(data.table)
 import(lgr)
 import(mlr3)
 import(mlr3misc)
+import(mlr3tuning)
 import(paradox)
 importFrom(R6,R6Class)
 importFrom(R6,is.R6)
