--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,5 +30,6 @@ import(mlr3tuning)
 import(paradox)
 importFrom(R6,R6Class)
 importFrom(stats,runif)
+importFrom(utils,bibentry)
 useDynLib(mlr3mbo,c_eps_indicator)
 useDynLib(mlr3mbo,c_sms_indicator)
