--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,6 +44,7 @@ Imports:
     bbotk (>= 0.2.1),
     checkmate (>= 2.0.0),
     data.table,
+    gower,
     lgr (>= 0.3.0),
     mlr3,
     mlr3misc (>= 0.3.0),
@@ -68,7 +69,7 @@ LazyData: true
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Collate: 
+Collate:
     'AcqFunction.R'
     'AcqFunctionAEI.R'
     'AcqFunctionCB.R'
