--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,10 @@ export(SurrogateSingleCritLearner)
 export(TunerMbo)
 export(bayesop_smsemoa)
 export(bayesop_soo)
+export(default_acq_optimizer)
+export(default_acqfun)
+export(default_loopfun)
+export(default_surrogate)
 export(result_by_surrogate_design)
 import(bbotk)
 import(checkmate)
