--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,7 @@ export(SurrogateMultiCrit)
 export(SurrogateMultiCritLearners)
 export(SurrogateSingleCrit)
 export(SurrogateSingleCritLearner)
-export(bayesop_smsemoa)
+export(bayesop_smsego)
 export(bayesop_soo)
 export(default_acq_optimizer)
 export(default_acqfun)
