--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,7 @@ export(SurrogateMultiCrit)
 export(SurrogateMultiCritLearners)
 export(SurrogateSingleCrit)
 export(SurrogateSingleCritLearner)
-export(TunerMbo)
-export(bayesop_smsemoa)
+export(bayesop_smsego)
 export(bayesop_soo)
 export(result_by_surrogate_design)
 import(bbotk)
