rename all bayesop_. to bayesopt_.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,8 @@ export(SurrogateMultiCrit)
 export(SurrogateMultiCritLearners)
 export(SurrogateSingleCrit)
 export(SurrogateSingleCritLearner)
-export(bayesop_smsego)
-export(bayesop_soo)
+export(bayesopt_smsego)
+export(bayesopt_soo)
 export(result_by_surrogate_design)
 import(bbotk)
 import(checkmate)
