--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -76,6 +76,7 @@ Collate:
     'AcqFunctionCB.R'
     'AcqFunctionEI.R'
     'AcqFunctionEIPS.R'
+    'AcqFunctionSmsEgo.R'
     'AcqOptimizer.R'
     'OptimizerMbo.R'
     'Surrogate.R'
@@ -87,6 +88,7 @@ Collate:
     'bibentries.R'
     'bayesopt_mpcl.R'
     'bayesopt_parego.R'
+    'bayesopt_smsego.R'
     'bayesopt_soo.R'
     'bayesopt_soo_eips.R'
     'result_by_surrogate_design.R'
