suggest rgenoud due to new defaults in surrogate helpers in tests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -58,7 +58,8 @@ Suggests:
     DiceKriging,
     lhs,
     testthat,
-    ggplot2
+    ggplot2,
+    rgenoud
 Remotes:
     mlr-org/bbotk,
     mlr-org/mlr3tuning
