--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(AcqFunctionAEI)
 export(AcqFunctionCB)
 export(AcqFunctionEI)
 export(AcqFunctionEIPS)
+export(AcqFunctionMES)
 export(AcqFunctionSmsEgo)
 export(AcqOptimizer)
 export(OptimizerMbo)
