--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,10 @@ export(SurrogateSingleCrit)
 export(SurrogateSingleCritLearner)
 export(bayesopt_smsego)
 export(bayesopt_soo)
+export(default_acq_optimizer)
+export(default_acqfun)
+export(default_loopfun)
+export(default_surrogate)
 export(result_by_surrogate_design)
 import(bbotk)
 import(checkmate)
