--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -67,11 +67,11 @@ Suggests:
     ggplot2,
     rgenoud
 Remotes:
-    mlr-org/bbotk,
+    mlr-org/bbotk (>= 0.4.0.9000)
     mlr-org/mlr3tuning
 ByteCompile: no
 Encoding: UTF-8
 LazyData: true
 NeedsCompilation: yes
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
