--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,8 +15,8 @@ export(SurrogateSingleCrit)
 export(SurrogateSingleCritLearner)
 export(bayesopt_smsego)
 export(bayesopt_soo)
-export(default_acq_optimizer)
 export(default_acqfun)
+export(default_acqoptimizer)
 export(default_loopfun)
 export(default_surrogate)
 export(result_by_surrogate_design)
