--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -67,7 +67,7 @@ Suggests:
     ggplot2,
     rgenoud
 Remotes:
-    mlr-org/bbotk (>= 0.4.0.9000)
+    mlr-org/bbotk (>= 0.4.0.9000),
     mlr-org/mlr3tuning
 ByteCompile: no
 Encoding: UTF-8
