default_acqoptimizer --> default_acqopt, fix result_by_surrogate_design for noisy, add defaults to OptimizerMbo fields

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,7 @@ export(SurrogateSingleCritLearner)
 export(bayesopt_smsego)
 export(bayesopt_soo)
 export(default_acqfun)
-export(default_acqoptimizer)
+export(default_acqopt)
 export(default_loopfun)
 export(default_surrogate)
 export(result_by_surrogate_design)
