--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,16 +10,19 @@ export(AcqFunctionSmsEgo)
 export(AcqOptimizer)
 export(OptimizerMbo)
 export(Surrogate)
-export(SurrogateMultiCrit)
-export(SurrogateMultiCritLearners)
-export(SurrogateSingleCrit)
-export(SurrogateSingleCritLearner)
+export(SurrogateLearner)
+export(SurrogateLearners)
+export(acqf)
+export(acqfs)
+export(bayesopt_ego)
+export(bayesopt_mpcl)
+export(bayesopt_parego)
 export(bayesopt_smsego)
-export(bayesopt_soo)
 export(default_acqfun)
 export(default_acqopt)
 export(default_loopfun)
 export(default_surrogate)
+export(mlr_acqfunctions)
 export(result_by_surrogate_design)
 import(bbotk)
 import(checkmate)
@@ -30,7 +33,10 @@ import(mlr3misc)
 import(mlr3tuning)
 import(paradox)
 importFrom(R6,R6Class)
+importFrom(stats,dnorm)
+importFrom(stats,pnorm)
 importFrom(stats,runif)
+importFrom(stats,setNames)
 importFrom(utils,bibentry)
 useDynLib(mlr3mbo,c_eps_indicator)
 useDynLib(mlr3mbo,c_sms_indicator)
