--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -67,7 +67,7 @@ Suggests:
     ggplot2,
     rgenoud
 Remotes:
-    mlr-org/bbotk@extended_codomain,
+    mlr-org/bbotk,
     mlr-org/mlr3tuning
 ByteCompile: no
 Encoding: UTF-8
