--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(AcqFunction)
 export(AcqFunctionAEI)
 export(AcqFunctionCB)
+export(AcqFunctionEHVI)
 export(AcqFunctionEI)
 export(AcqFunctionEIPS)
 export(AcqFunctionPI)
@@ -15,6 +16,7 @@ export(SurrogateLearners)
 export(acqf)
 export(acqfs)
 export(bayesopt_ego)
+export(bayesopt_moo)
 export(bayesopt_mpcl)
 export(bayesopt_parego)
 export(bayesopt_smsego)
