restructure ehvi, add mego

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -94,7 +94,8 @@ Collate:
     'SurrogateLearners.R'
     'assertions.R'
     'bayesopt_ego.R'
-    'bayesopt_moo.R'
+    'bayesopt_ehvi.R'
+    'bayesopt_mego.R'
     'bayesopt_mpcl.R'
     'bayesopt_parego.R'
     'bayesopt_smsego.R'
