--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,8 @@ export(SurrogateLearners)
 export(acqf)
 export(acqfs)
 export(bayesopt_ego)
-export(bayesopt_moo)
+export(bayesopt_ehvi)
+export(bayesopt_mego)
 export(bayesopt_mpcl)
 export(bayesopt_parego)
 export(bayesopt_smsego)
