--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(AcqFunctionEIPS)
 export(AcqFunctionPI)
 export(AcqFunctionSmsEgo)
 export(AcqOptimizer)
+export(OptimizerGlobalLocal)
 export(OptimizerMbo)
 export(Surrogate)
 export(SurrogateLearner)
