--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -65,7 +65,8 @@ Suggests:
     lhs,
     testthat,
     ggplot2,
-    rgenoud
+    rgenoud,
+    withr
 Remotes:
     mlr-org/bbotk,
     mlr-org/mlr3tuning
