feat: add TunerMbo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(OptimizerMbo)
 export(Surrogate)
 export(SurrogateLearner)
 export(SurrogateLearners)
+export(TunerMbo)
 export(acqf)
 export(acqfs)
 export(bayesopt_ego)
