--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -66,6 +66,8 @@ Suggests:
     testthat (>= 3.0.0),
     rgenoud,
     withr
+Remotes:
+    mlr-org/paradox
 ByteCompile: no
 Encoding: UTF-8
 LazyData: true
