--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,18 +43,18 @@ URL: https://mlr3mbo.mlr-org.com,
     https://github.com/mlr-org/mlr3mbo
 BugReports: https://github.com/mlr-org/mlr3mbo/issues
 Depends:
+    mlr3tuning (>= 0.10.0),
     R (>= 3.1.0)
 Imports:
     backports,
-    bbotk (>= 0.4.0.9000),
+    bbotk (>= 0.5.0),
     checkmate (>= 2.0.0),
     data.table,
     gower,
-    lgr (>= 0.3.0),
-    mlr3,
-    mlr3misc (>= 0.3.0),
-    mlr3tuning (>= 0.9.0.9000),
-    paradox (>= 0.3),
+    lgr,
+    mlr3 (>= 0.13.0),
+    mlr3misc (>= 0.7.0),
+    paradox (>= 0.8.0),
     R6
 Suggests:
     mlr3pipelines,
@@ -63,13 +63,9 @@ Suggests:
     rpart,
     DiceKriging,
     lhs,
-    testthat,
-    ggplot2,
+    testthat (>= 3.0.0),
     rgenoud,
     withr
-Remotes:
-    mlr-org/bbotk,
-    mlr-org/mlr3tuning
 ByteCompile: no
 Encoding: UTF-8
 LazyData: true
@@ -90,6 +86,7 @@ Collate:
     'Surrogate.R'
     'SurrogateLearner.R'
     'SurrogateLearners.R'
+    'TunerMbo.R'
     'assertions.R'
     'bayesopt_ego.R'
     'bayesopt_mpcl.R'
