feat: add label and man field

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,6 +44,9 @@ Suggests:
     rpart,
     testthat (>= 3.0.0),
     withr
+Remotes:
+    mlr-org/bbotk
+    mlr-org/mlr3tuning,
 ByteCompile: no
 Encoding: UTF-8
 NeedsCompilation: yes
