--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ License: LGPL-3
 URL: https://mlr3mbo.mlr-org.com, https://github.com/mlr-org/mlr3mbo
 BugReports: https://github.com/mlr-org/mlr3mbo/issues
 Depends:
-    mlr3tuning (>= 0.12.1.9000),
+    mlr3tuning (>= 0.12.1),
     R (>= 3.1.0)
 Imports:
     backports,
@@ -32,7 +32,7 @@ Imports:
     lgr,
     mlr3 (>= 0.13.0),
     mlr3misc (>= 0.7.0),
-    paradox (>= 0.8.0),
+    paradox (>= 0.9.0.9000),
     R6
 Suggests:
     DiceKriging,
@@ -44,9 +44,7 @@ Suggests:
     rpart,
     testthat (>= 3.0.0),
     withr
-Remotes:
-    mlr-org/bbotk,
-    mlr-org/mlr3tuning
+Remotes: mlr-org/paradox
 ByteCompile: no
 Encoding: UTF-8
 NeedsCompilation: yes
