--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,7 @@ export(AcqOptimizer)
 export(OptimizerMbo)
 export(Surrogate)
 export(SurrogateLearner)
-export(SurrogateLearners)
+export(SurrogateLearnerCollection)
 export(TunerMbo)
 export(acqf)
 export(acqfs)
