--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -66,6 +66,7 @@ Collate:
     'SurrogateLearnerCollection.R'
     'TunerMbo.R'
     'assertions.R'
+    'mlr_loop_functions.R'
     'bayesopt_ego.R'
     'bayesopt_mpcl.R'
     'bayesopt_parego.R'
