--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(AcqFunctionAEI)
 export(AcqFunctionCB)
 export(AcqFunctionEI)
 export(AcqFunctionEIPS)
+export(AcqFunctionMean)
 export(AcqFunctionPI)
 export(AcqFunctionSmsEgo)
 export(AcqOptimizer)
