--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,6 @@ Imports:
     bbotk (>= 0.5.3),
     checkmate (>= 2.0.0),
     data.table,
-    gower,
     lgr,
     mlr3 (>= 0.13.0),
     mlr3misc (>= 0.7.0),
@@ -67,6 +66,7 @@ Collate:
     'SurrogateLearnerCollection.R'
     'TunerMbo.R'
     'assertions.R'
+    'mlr_loop_functions.R'
     'bayesopt_ego.R'
     'bayesopt_mpcl.R'
     'bayesopt_parego.R'
