--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(default_loopfun)
 export(default_surrogate)
 export(mlr_acqfunctions)
 export(mlr_loop_functions)
+export(result_by_default)
 export(result_by_surrogate_design)
 export(srlrn)
 export(srlrnc)
