--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(AcqFunctionAEI)
 export(AcqFunctionCB)
 export(AcqFunctionEI)
 export(AcqFunctionEIPS)
+export(AcqFunctionMean)
 export(AcqFunctionPI)
 export(AcqFunctionSmsEgo)
 export(AcqOptimizer)
