--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(AcqFunctionEIPS)
 export(AcqFunctionMean)
 export(AcqFunctionPI)
 export(AcqFunctionSmsEgo)
+export(AcqFunctionTTEI)
 export(AcqOptimizer)
 export(OptimizerMbo)
 export(Surrogate)
