prepare new so_config

--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,8 @@ Meta
 attic/so_config/fanova.py
 attic/so_config/Pipfile
 attic/so_config/*.rds
+attic/so_config_old/fanova.py
+attic/so_config_old/Pipfile
+attic/so_config_old/*.rds
 /doc/
 /Meta/
