--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(as.data.table,DictionaryAcqFunction)
 S3method(as.data.table,DictionaryLoopFunction)
 S3method(print,loop_function)
 export(AcqFunction)
+export(AcqFunctionAEI)
 export(AcqFunctionCB)
 export(AcqFunctionEI)
 export(AcqFunctionEIPS)
