--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -74,6 +74,7 @@ RoxygenNote: 7.2.2
 Collate:
     'mlr_acqfunctions.R'
     'AcqFunction.R'
+    'AcqFunctionAEI.R'
     'AcqFunctionCB.R'
     'AcqFunctionEI.R'
     'AcqFunctionEIPS.R'
