--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -78,10 +78,12 @@ Collate:
     'AcqFunctionCB.R'
     'AcqFunctionEI.R'
     'AcqFunctionEIPS.R'
+    'AcqFunctionLFBO.R'
     'AcqFunctionMean.R'
     'AcqFunctionPI.R'
     'AcqFunctionSmsEgo.R'
     'AcqOptimizer.R'
+    'LearnerRegrLFBO.R'
     'OptimizerMbo.R'
     'Surrogate.R'
     'SurrogateLearner.R'
