--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,10 +8,12 @@ export(AcqFunctionAEI)
 export(AcqFunctionCB)
 export(AcqFunctionEI)
 export(AcqFunctionEIPS)
+export(AcqFunctionLFBO)
 export(AcqFunctionMean)
 export(AcqFunctionPI)
 export(AcqFunctionSmsEgo)
 export(AcqOptimizer)
+export(LearnerRegrLFBO)
 export(OptimizerMbo)
 export(Surrogate)
 export(SurrogateLearner)
