--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ import(paradox)
 importFrom(R6,R6Class)
 importFrom(stats,dnorm)
 importFrom(stats,pnorm)
+importFrom(stats,quantile)
 importFrom(stats,runif)
 importFrom(stats,setNames)
 importFrom(utils,bibentry)
