--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(print,loop_function)
 export(AcqFunction)
 export(AcqFunctionAEI)
 export(AcqFunctionCB)
+export(AcqFunctionEHVI)
 export(AcqFunctionEI)
 export(AcqFunctionEIPS)
 export(AcqFunctionMean)
