fix: unloading removes optimizers and tuners from dictionaries closes #94

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -82,6 +82,7 @@ Collate:
     'AcqFunctionPI.R'
     'AcqFunctionSmsEgo.R'
     'AcqOptimizer.R'
+    'aaa.R'
     'OptimizerMbo.R'
     'Surrogate.R'
     'SurrogateLearner.R'
