--- a/.gitignore
+++ b/.gitignore
@@ -96,6 +96,7 @@ rsconnect/
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
 cran-comments.md
+CRAN-SUBMISSION
 .vscode/
 docs/
 .vscode
