BREAKING CHANGE: revisited the design of how results are assigned

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -84,6 +84,10 @@ Collate:
     'AcqOptimizer.R'
     'aaa.R'
     'OptimizerMbo.R'
+    'mlr_result_assigners.R'
+    'ResultAssigner.R'
+    'ResultAssignerArchive.R'
+    'ResultAssignerSurrogate.R'
     'Surrogate.R'
     'SurrogateLearner.R'
     'SurrogateLearnerCollection.R'
@@ -97,8 +101,6 @@ Collate:
     'helper.R'
     'loop_function.R'
     'mbo_defaults.R'
-    'result_by_default.R'
-    'result_by_surrogate_design.R'
     'sugar.R'
     'zzz.R'
 VignetteBuilder: knitr
