--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(as.data.table,DictionaryAcqFunction)
 S3method(as.data.table,DictionaryLoopFunction)
+S3method(as.data.table,DictionaryResultAssigner)
 S3method(print,loop_function)
 export(AcqFunction)
 export(AcqFunctionAEI)
@@ -13,6 +14,9 @@ export(AcqFunctionPI)
 export(AcqFunctionSmsEgo)
 export(AcqOptimizer)
 export(OptimizerMbo)
+export(ResultAssigner)
+export(ResultAssignerArchive)
+export(ResultAssignerSurrogate)
 export(Surrogate)
 export(SurrogateLearner)
 export(SurrogateLearnerCollection)
@@ -26,11 +30,12 @@ export(bayesopt_smsego)
 export(default_acqfun)
 export(default_acqopt)
 export(default_loopfun)
+export(default_result_assigner)
 export(default_surrogate)
 export(mlr_acqfunctions)
 export(mlr_loop_functions)
-export(result_by_default)
-export(result_by_surrogate_design)
+export(mlr_result_assigners)
+export(ras)
 export(srlrn)
 export(srlrnc)
 import(bbotk)
